Change the vendor name for packagist compatibility

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "trekksoft/trekksoft",
+  "name": "dblencowe/trekksoft",
   "description": "TrekkSoft is the online booking solution for tour operators & activity providers. Please learn more on http://www.trekksoft.com.",
   "keywords": ["Activities", "activity", "Booking", "outdoor", "payment", "Reservation", "sports", "tour", "tours", "trekking"],
   "homepage": "https://trekksoft.com",
